applications/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    goldilocks.fairwinds.com/enabled: "true"
